# ginmi

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
.github/workflows/: publish.yml  rust.yml
proto/: gnmi.proto  gnmi_ext.proto  google.proto  target.proto
proto/collector/: collector.proto
proto/gnmi/: gnmi.proto
src/: auth.rs  error.rs  lib.rs  path.rs
src/client/: capabilities.rs  client.rs  dangerous.rs  get.rs  gnmi_client.rs  mod.rs
tests/: integration_test.rs
