[package]
authors = ["Leon Lux <leon-niklas.lux@informatik.hs-fulda.de>"]
categories = ["network-programming", "asynchronous"]
description = """
An asynchrounous gNMI client to interact with and manage network devices.
"""
name = "ginmi"
version = "0.1.1"
edition = "2021"
keywords = ["grpc", "async", "gnmi", "network-automation"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/Lachstec/ginmi"
homepage = "https://github.com/Lachstec/ginmi"

# Currently doctests always fail because of the generated protobuf module
[lib]
doctest = false

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
prost = "0.12.3"
tonic = { version = "0.11.0", features = ["transport", "tls", "tls-roots"] }
thiserror = "1.0.56"
tower-service = "0.3.2"
# Needs to match tonics version of http, else implementations of the Service trait break.
http = "0.2.0"
tower = "0.4.13"

[dev-dependencies]
tokio-test = "0.4.3"

[build-dependencies]
tonic-build = "0.11.0"