[package]
authors = ["Leon Lux <leon-niklas.lux@informatik.hs-fulda.de>"]
categories = ["network-programming", "asynchronous"]
description = """
An asynchrounous gNMI client to interact with and manage network devices.
"""
name = "ginmi"
version = "0.1.2"
edition = "2021"
keywords = ["grpc", "async", "gnmi", "network-automation"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/Lachstec/ginmi"
homepage = "https://github.com/Lachstec/ginmi"

# Currently doctests always fail because of the generated protobuf module
[lib]
doctest = false

[features]
dangerous_configuration = ["dep:hyper-rustls", "tower-http/util", "tower-http/add-extension", "dep:rustls-pemfile", "dep:tokio-rustls"]

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
prost = "0.12.3"
tonic = { version = "0.11.0", features = ["transport", "tls", "tls-roots"] }
thiserror = "1.0.56"
tower-service = "0.3.2"
# Needs to match tonics version of http, else implementations of the Service trait break.
http = "0.2.0"
tower = "0.4.13"

# Dependencies for dangerour configuration
hyper = { version = "0.14" }
hyper-rustls = { version = "0.24.0", optional = true, features = ["http2"] }
tower-http = { version = "0.4", optional = true}
rustls-pemfile = { version = "1", optional = true }
tokio-rustls = { version = "0.24.0", optional = true, features = ["dangerous_configuration"] }


[dev-dependencies]
tokio-test = "0.4.3"

[build-dependencies]
tonic-build = "0.11.0"